welcome.lessons.welcome.loopfor.LoopFor.scala.code
for(w<-1 to 7) {
	avance();
}
if(estSirBiscuit) {
	prendBiscuit();
}

